--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "WORK IN PROGRESS - An opinionated NPM module structure format",
   "main": "bin/npm-standard",
   "scripts": {
-    "test": "mocha"
+    "pretest": "standard && echint",
+    "test": "mocha",
+    "posttest": "npm run coverage",
+    "coverage": "istanbul cover --dir coverage _mocha -- -R dot",
+    "codeclimate": "codeclimate < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -15,12 +19,34 @@
     "standard",
     "format",
     "scaffold",
-    "module"
+    "module",
+    "package"
   ],
+  "echint": {
+    "ignore": [
+      "test/tmp/**"
+    ]
+  },
+  "standard": {
+    "ignore": [
+      "test/tmp/**"
+    ]
+  },
   "author": "Trent Oswald <trentoswald@therebelrobot.com> (@therebelrobot)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/therebelbeta/npm-standard/issues"
   },
-  "homepage": "https://github.com/therebelbeta/npm-standard#readme"
+  "homepage": "https://github.com/therebelbeta/npm-standard#readme",
+  "devDependencies": {
+    "codeclimate-test-reporter": "0.0.4",
+    "echint": "^1.3.0",
+    "istanbul": "^0.3.17",
+    "mocha": "^2.2.5",
+    "standard": "^4.4.1"
+  },
+  "dependencies": {
+    "commander": "^2.8.1",
+    "dotenv": "^1.2.0"
+  }
 }
